# training_project_2-calendarAPI

./: Dockerfile  docker-compose.yml  manage.py  pyproject.toml  readme.md  start.sh
accounts/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
accounts/management/commands/: create_country.py  createsuperuser.py
accounts/migrations/: 0001_initial.py  0002_country_alter_customuser_country.py  0003_alter_customuser_country.py
accounts/tests/: test_commands.py  test_models.py  test_signals.py  test_views.py
calendarAPI/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
events/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
events/management/commands/: create_official_holidays.py
events/migrations/: 0001_initial.py  0002_add_default_value_for_Notification.py  0003_auto_20220411_1348.py  0004_auto_20220416_1053.py  0005_event_name_start_datetime_end_datetime_unique.py
events/tests/: test_commands.py  test_models.py  test_serializers.py  test_tasks.py  test_utils.py  test_views.py
events/utils/: create_tasks.py
nginx/: default.conf
